--- a/lab05.ipynb
+++ b/lab05.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,26 +113,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('aa', 'aa'), ('ab', 'ba')]\n",
-      "[('ab', 'ba')]\n",
       "['ba']\n",
-      "('ab', 'ba')\n",
-      "False\n",
-      "[('eht', 'the'), ('dog', 'god'), ('ala', 'ala')]\n",
-      "[('eht', 'the'), ('dog', 'god')]\n",
-      "['the', 'god']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "reverse_nonpalindromes.<locals>.<lambda>() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[46], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m reduce(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: (x, x[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]), words)))\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(reverse_nonpalindromes([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maa\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mab\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m==\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mba\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mreverse_nonpalindromes\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43meht\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdog\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mala\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m==\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthe\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgod\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "Cell \u001b[0;32mIn[46], line 8\u001b[0m, in \u001b[0;36mreverse_nonpalindromes\u001b[0;34m(words)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: (x, x[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]), words))))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: (x, x[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]), words)))))\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mreduce\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mfilter\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m!=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwords\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m reduce(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: (x, x[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]), words)))\n",
-      "\u001b[0;31mTypeError\u001b[0m: reverse_nonpalindromes.<locals>.<lambda>() takes 1 positional argument but 2 were given"
+      "True\n",
+      "['the', 'god']\n",
+      "True\n"
      ]
     }
    ],
@@ -141,11 +125,9 @@
     "def reverse_nonpalindromes(words):\n",
     "    \"\"\"Zwraca listę odwróconych słowa które nie są palindromami. \n",
     "    Palindromy zostają pominięte\"\"\"\n",
-    "    print(list(map(lambda x: (x, x[::-1]), words)))\n",
-    "    print(list(filter(lambda x: x[0] != x[1], map(lambda x: (x, x[::-1]), words))))\n",
-    "    print(list(map(lambda x: x[1], filter(lambda x: x[0] != x[1], map(lambda x: (x, x[::-1]), words)))))\n",
-    "    print(reduce(lambda x, y: x[1], filter(lambda x: x[0] != x[1], map(lambda x: (x, x[::-1]), words))))\n",
-    "    return reduce(lambda x: x[1], filter(lambda x: x[0] != x[1], map(lambda x: (x, x[::-1]), words)))\n",
+    "    #Zakladam ze nie mozna uzyc x[::-1]\n",
+    "    print(reduce(lambda x, y: x + [reduce(lambda a, b: b + a, y, \"\")] if y != reduce(lambda a, b: b + a, y, \"\") else x, words, []))\n",
+    "    return reduce(lambda x, y: x + [reduce(lambda a, b: b + a, y, \"\")] if y != reduce(lambda a, b: b + a, y, \"\") else x, words, [])\n",
     "\n",
     "print(reverse_nonpalindromes([\"aa\", \"ab\"])==[\"ba\"])\n",
     "print(reverse_nonpalindromes([\"eht\", \"dog\", \"ala\"])==[\"the\", \"god\"])"
@@ -167,15 +149,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n",
+      "True\n",
+      "194\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from functools import reduce\n",
     "\n",
     "def squares_of_odds(values):\n",
     "    \"\"\"Zwraca sumę kwadratów nieparzystych liczb\"\"\"\n",
-    "    return sum(v**2 for v in values if v%2)\n",
+    "    #return sum(v**2 for v in values if v%2)\n",
+    "    print(reduce(lambda x, y: x + y, map(lambda a: a**2, filter(lambda b: b % 2 == 1, values)),0))\n",
+    "    return reduce(lambda x, y: x + y, map(lambda a: a**2, filter(lambda b: b % 2 == 1, values)),0)\n",
     "\n",
     "print(squares_of_odds([1,2,3,4,5,6])==35)\n",
     "print(squares_of_odds([10, 13, 5, 6])==194)"
@@ -197,13 +192,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def all_are_positive(numbers):\n",
     "    \"\"\"zwraca czy wszystkie liczby są dodatnie\"\"\"\n",
-    "    return all(n>0 for n in numbers)    \n",
+    "    #return all(n>0 for n in numbers)    \n",
+    "    return reduce(lambda x, y: x and y > 0, numbers, True) \n",
     "\n",
     "print(all_are_positive([])) #PS: tu sie im wykraczy bez inicjalizatora :)\n",
     "print(all_are_positive([1,2,3]))\n",
@@ -227,13 +234,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "True\n",
+      "[1, 2, 3, 4]\n",
+      "True\n",
+      "['1', 1.1]\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def flatten(lists):\n",
-    "    return [elem for l in lists for elem in l]\n",
-    "\n",
+    "    #return [elem for l in lists for elem in l]\n",
+    "    print(reduce(lambda x, y: x + reduce(lambda a, b: a + [b], y, []), lists))\n",
+    "    return reduce(lambda x, y: x + reduce(lambda a, b: a + [b], y, []), lists)\n",
     "print(flatten([[]])==[])\n",
     "print(flatten([[1,2],[3,4]])==[1,2,3,4])\n",
     "print(flatten([[\"1\", 1.1],[]])==[\"1\", 1.1])"
@@ -263,13 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def celsius_to_fahrenheit(x):\n",
     "    \"\"\"Konwertuje liste temperatur w stopniach Celsjusza do skali Fahrenheita\"\"\"\n",
-    "    pass\n",
+    "    return map(lambda y: y * (9 / 5) + 32 ,x)\n",
     "\n",
     "print(list(celsius_to_fahrenheit([0, 10, 100])) == [32.0, 50.0, 212.0])\n",
     "print(list(celsius_to_fahrenheit([-123, 0])) == [-189.4, 32.0])"
@@ -284,15 +314,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "from functools import reduce\n",
     "\n",
     "def product_greater_than(x, k=0):\n",
     "    \"\"\"Zwraca iloczyn liczb w liście x większych od k\"\"\"\n",
-    "    pass\n",
+    "    return reduce(lambda a, b: a * b if b > k else a, x , 1)\n",
     "\n",
     "print(product_greater_than([1, 2, 3]) == 6)\n",
     "print(product_greater_than([1, 2, 3], 2) == 3)\n",
@@ -308,16 +347,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ala ma kota\n",
+      "True\n",
+      "ala\n",
+      "True\n",
+      "ala pieknego kota\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "from functools import reduce\n",
-    "\n",
+    "import itertools as it\n",
     "def create_sentence(x, k=0):\n",
     "    \"\"\"Łączy słowa (o długości co najmniej k) z listy x w zdanie - nie używa reduce\"\"\"\n",
-    "    return reduce(lambda x, y: x + \" \" + y, filter(lambda x: len(x) >= k, x))\n",
-    "    \n",
+    "    #return reduce(lambda x, y: x + \" \" + y, filter(lambda x: len(x) >= k, x))\n",
+    "    print(\" \".join((filter(lambda a: len(a) >= k, x))))\n",
+    "    return \" \".join((filter(lambda a: len(a) >= k, x)))\n",
     "print(create_sentence(['ala', 'ma', 'kota']) == 'ala ma kota')\n",
     "print(create_sentence(['ala']) == 'ala')\n",
     "print(create_sentence(['ala', 'ma', 'pieknego', 'kota'], k=3) == 'ala pieknego kota')"
@@ -332,14 +384,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1,), (2,), (3,)]\n",
+      "True\n",
+      "[(2, 3), (3, 4)]\n",
+      "True\n",
+      "[]\n",
+      "True\n",
+      "[(1, 3, 5), (2, 4, 6)]\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def tuple_if_sum_greater(k, *lists):\n",
     "    \"\"\"Zwraca k-elementową krotke składającą się z kolejnych elementów list podanych jako arguemnty pozycyjne, \n",
     "       jeżeli ich suma jest większa niż parametr k\"\"\"\n",
-    "    pass\n",
+    "    print(list(filter(lambda x: sum(x) > k, list(zip(*lists)))))\n",
+    "    return list(filter(lambda x: sum(x) > k, list(zip(*lists))))\n",
     "\n",
     "print(list(tuple_if_sum_greater(0, [1,2,3])) == [(1,),(2,),(3,)])\n",
     "print(list(tuple_if_sum_greater(4, [1,2,3], [2,3,4])) == [(2,3),(3,4)])\n",
@@ -356,15 +424,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "\n",
     "def primes(N):\n",
     "    \"\"\"Zwraca zbiór liczb pierwszych od 0 do N włącznie\"\"\"\n",
-    "    pass\n",
+    "    return set(filter(lambda x: not any(x % k == 0 for k in range(2, x)), range(2, N + 1)))\n",
     "\n",
     "print(primes(5) == {2, 3, 5})\n",
     "print(primes(10) == {2, 3, 5, 7})\n",
