--- a/part07.ipynb
+++ b/part07.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -360,7 +360,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "12345\n",
       "0\n",
+      "12345\n",
       "12345\n"
      ]
     },
@@ -369,18 +371,20 @@
      "evalue": "type object 'MyOtherClass' has no attribute 'num'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1380/440259524.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# 0 or 12345?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mMyOtherClass\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMyOtherClass\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'MyOtherClass' has no attribute 'num'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(MyOtherClass\u001b[38;5;241m.\u001b[39mnum)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m MyOtherClass\u001b[38;5;241m.\u001b[39mnum\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mMyOtherClass\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum\u001b[49m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'MyOtherClass' has no attribute 'num'"
      ]
     }
    ],
    "source": [
     "x = MyOtherClass()\n",
+    "print(MyOtherClass.num)\n",
     "print(x.num) # 0 or 12345?\n",
     "del x.num\n",
     "print(x.num) # 0 or 12345?\n",
+    "print(MyOtherClass.num)\n",
     "del MyOtherClass.num\n",
     "print(MyOtherClass.num)"
    ]
@@ -409,23 +413,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "8\n",
+      "16\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'C' object has no attribute 'counter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28mprint\u001b[39m(c\u001b[38;5;241m.\u001b[39mcounter)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m c\u001b[38;5;241m.\u001b[39mcounter \u001b[38;5;66;03m# Leaves no trace\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcounter\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# prints 1, 2, 4, 8\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'C' object has no attribute 'counter'"
+     ]
+    }
+   ],
    "source": [
     "# You can set attributes on instance (and class) objects\n",
     "# on the fly (we used this in the constructor!)\n",
+    "class C():\n",
+    "    pass\n",
+    "        \n",
+    "c = C()\n",
     "c.counter = 1\n",
     "while c.counter < 10:\n",
-    "    c.counter = x.counter * 2\n",
+    "    c.counter = c.counter * 2\n",
     "    print(c.counter)\n",
     "\n",
     "del c.counter # Leaves no trace\n",
-    "\n",
+    "c.counter\n",
     "# prints 1, 2, 4, 8"
    ]
   },
@@ -453,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -470,18 +500,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'method'>\n",
+      "<class 'function'>\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "x = MyClass()\n",
     "x.greet() # 'Hello world!'\n",
     "# Weird... doesn't `greet` accept an argument?\n",
-    "\n",
+    "MyClass.greet(MyClass)\n",
     "print(type(x.greet)) # method\n",
     "print(type(MyClass.greet)) # function\n",
     "\n",
@@ -527,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -542,6 +583,7 @@
     "        self.slices_left = slices\n",
     "    def eat_slice(self):\n",
     "        if self.slices_left > 0:\n",
+    "            print(\"0\")\n",
     "            self.slices_left -= 1\n",
     "        else:\n",
     "            print(\"Oh no! Out of pizza\")\n",
@@ -551,13 +593,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function Pizza.eat_slice at 0x7ff938737ba0>\n"
+     ]
+    }
+   ],
    "source": [
     "p = Pizza(14, (\"Pepperoni\", \"Olives\"), slices=12)\n",
     "print(Pizza.eat_slice)\n",
@@ -566,13 +616,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Pizza.eat_slice of 14\" pizza>\n"
+     ]
+    }
+   ],
    "source": [
     "print(p.eat_slice)\n",
     "# => <bound method Pizza.eat_slice of 14\" Pizza>"
@@ -580,28 +638,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\" pizza\n",
+      "<function Pizza.eat_slice at 0x7ff938737ba0>\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "method = p.eat_slice\n",
-    "method.__self__ # => 14\" Pizza\n",
-    "method.__func__ # => <function Pizza.eat_slice>"
+    "print(method.__self__) # => 14\" Pizza\n",
+    "print(method.__func__) # => <function Pizza.eat_slice>\n",
+    "method()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "p.eat_slice() # Implicitly calls Pizza.eat_slice(p)"
    ]
@@ -619,13 +696,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mr. Peanut Butter'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Dog:\n",
     "    kind = 'Canine' # class variable shared by all instances\n",
@@ -1184,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1206,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1229,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1251,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1271,6 +1359,7 @@
        " '__ge__',\n",
        " '__getattr__',\n",
        " '__getattribute__',\n",
+       " '__getstate__',\n",
        " '__gt__',\n",
        " '__hash__',\n",
        " '__init__',\n",
@@ -1292,7 +1381,7 @@
        " '_y']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1604,13 +1693,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<class '__main__.K1'>, <class '__main__.A'>, <class '__main__.B'>, <class '__main__.C'>, <class 'object'>]\n",
+      "[<class '__main__.K2'>, <class '__main__.D'>, <class '__main__.B'>, <class '__main__.E'>, <class 'object'>]\n",
+      "[<class '__main__.K3'>, <class '__main__.D'>, <class '__main__.A'>, <class 'object'>]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1626,12 +1724,15 @@
        " object]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(K1.mro())\n",
+    "print(K2.mro())\n",
+    "print(K3.mro())\n",
     "Z.mro() # [Z, K1, K2, K3, D, A, B, C, E, object]"
    ]
   },
@@ -1792,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1817,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1830,7 +1931,7 @@
        "['banana', 'apple', 'orange']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1854,7 +1955,7 @@
        "['banana', 'apple', 'mango']"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1902,13 +2003,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('banana', ['apple', 'banana'])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Order:\n",
     "    def __init__(self, cart, customer):\n",
@@ -1935,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1957,13 +2069,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(0, 0)\n",
+      "Point(3, 5) Point(4, 6)\n",
+      "Point(-5, 3)\n",
+      "Point(-1, 9)\n"
+     ]
+    }
+   ],
    "source": [
     "o = Point()\n",
     "print(o) # Point(0, 0)\n",
@@ -2002,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2028,20 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "rev = Reverse('spam')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2051,10 +2161,34 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Reverse at 0x197bfceeb20>"
+       "<__main__.Reverse at 0x7ff938793e30>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rev = Reverse('spam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Reverse at 0x7ff938790d70>"
+      ]
+     },
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2419,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 42,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2434,20 +2568,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Forward raw_input to frontends\n",
+      "\n",
+      "Raises\n",
+      "------\n",
+      "StdinNotImplementedError if active frontend doesn't support stdin.\n",
+      "\u001b[0;31mFile:\u001b[0m      ~/.conda/envs/EF_Python/lib/python3.12/site-packages/ipykernel/kernelbase.py\n",
+      "\u001b[0;31mType:\u001b[0m      method"
+     ]
+    }
+   ],
    "source": [
     "What happens if the user enters a nonnumeric input?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -3101,13 +3251,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "class FileManager():\n",
     "    def __init__(self, filename, mode):\n",
@@ -3155,7 +3313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -3174,13 +3332,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Position(name='Oslo', lon=10.8, lat=59.9)\n"
+     ]
+    }
+   ],
    "source": [
     "pos = Position('Oslo', 10.8, 59.9)\n",
     "print(pos)"
@@ -3188,13 +3354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oslo is at 59.9°N, 10.8°E\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'{pos.name} is at {pos.lat}°N, {pos.lon}°E')"
    ]
@@ -3214,7 +3388,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -3228,7 +3402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
