--- a/lab06.ipynb
+++ b/lab06.ipynb
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -1797,6 +1797,7 @@
     "class BagOfWords(object):\n",
     "    def __init__(self, data):\n",
     "        self._counter = Counter()\n",
+    "        self._iter_index = 0\n",
     "        if type(data) == str:\n",
     "            for s in data.split(\" \"):\n",
     "                self._counter[s] += 1\n",
@@ -1815,8 +1816,17 @@
     "        return item in self._counter.keys()\n",
     "    \n",
     "    def __iter__(self):\n",
-    "        for k in self._counter.most_common():\n",
-    "            yield k[0]\n",
+    "        self._iter_index = 0\n",
+    "        return self\n",
+    "    def __next__(self):\n",
+    "        keys = list(self._counter.most_common())\n",
+    "        if self._iter_index < len(keys):\n",
+    "            word = keys[self._iter_index][0] \n",
+    "            self._iter_index += 1\n",
+    "            return word\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "        \n",
     "    def __add__(self, other):\n",
     "        if not isinstance(other, BagOfWords):\n",
     "            raise ValueError(\"Złe dodawanie\")\n",
@@ -1851,6 +1861,13 @@
     "for word in bag3:\n",
     "    print(word)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
