--- a/part05.ipynb
+++ b/part05.ipynb
@@ -2480,7 +2480,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ef_python",
    "language": "python",
    "name": "python3"
   },
@@ -2494,7 +2494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
