--- a/lab06.ipynb
+++ b/lab06.ipynb
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1831,8 +1831,8 @@
     "        if not isinstance(other, BagOfWords):\n",
     "            raise ValueError(\"Złe dodawanie\")\n",
     "        res = self._counter + other._counter\n",
-    "        new_bag = BagOfWords(\"\")  # Initialize with an empty string\n",
-    "        new_bag._counter = res  # Set the combined counter\n",
+    "        new_bag = BagOfWords(\"\") \n",
+    "        new_bag._counter = res \n",
     "        return new_bag\n",
     "    \n",
     "    def __getitem__(self, key):\n",
