--- a/inrter.ipynb
+++ b/inrter.ipynb
@@ -789,6 +789,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2], [4, 5], [5, 6], [6, 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inter = [[1,2], [4,5], [6,7], [5,6]]\n",
+    "inter.sort(key= lambda x: x[1])\n",
+    "print(inter)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
