--- a/lab06.ipynb
+++ b/lab06.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1661,7 +1661,7 @@
       "True\n",
       "True\n",
       "True\n",
-      "{set([{'ala': 2}]), set([{'ala': 4}]), set([{'ala': 1, 'jacek': 0}])}\n"
+      "{set([{'ala': 4}]), set([{'ala': 1, 'jacek': 0}]), set([{'ala': 2}])}\n"
      ]
     }
    ],
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1861,13 +1861,6 @@
     "for word in bag3:\n",
     "    print(word)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
