--- a/self_tests.ipynb
+++ b/self_tests.ipynb
@@ -717,42 +717,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wykonuję kod w try\n",
-      "Zawsze się wykonam - blok finally!\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m      9\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mZawsze się wykonam - blok finally!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m \u001b[43mtest_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[10], line 5\u001b[0m, in \u001b[0;36mtest_function\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWykonuję kod w try\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m# Tu powodujemy wyjątek, który nie jest obsługiwany\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;241;43m10\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m  \u001b[38;5;66;03m# ZeroDivisionError\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBłąd: niewłaściwa wartość\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
+     "data": {
+      "text/plain": [
+       "'aaaddss'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def test_function():\n",
-    "    try:\n",
-    "        print(\"Wykonuję kod w try\")\n",
-    "        # Tu powodujemy wyjątek, który nie jest obsługiwany\n",
-    "        result = 10 / 0  # ZeroDivisionError\n",
-    "    except ValueError:\n",
-    "        print(\"Błąd: niewłaściwa wartość\")\n",
-    "    finally:\n",
-    "        print(\"Zawsze się wykonam - blok finally!\")\n",
-    "\n",
-    "test_function()\n"
+    "b = \"aasdasd\"\n",
+    "b = \"\".join(sorted(b))\n",
+    "b"
    ]
   },
   {
@@ -765,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "EF_Python",
+   "display_name": "ef_python",
    "language": "python",
    "name": "python3"
   },
@@ -779,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
