--- a/pandas_group2.ipynb
+++ b/pandas_group2.ipynb
@@ -7102,7 +7102,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "EF_Python",
+   "display_name": "ef_python",
    "language": "python",
    "name": "python3"
   },
@@ -7116,7 +7116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
