--- a/self_tests.ipynb
+++ b/self_tests.ipynb
@@ -747,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ef_python",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -761,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
