--- a/lab13.ipynb
+++ b/lab13.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 130,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_12780/2589349304.py:4: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "C:\\Users\\kajet\\AppData\\Local\\Temp\\ipykernel_16032\\2589349304.py:4: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  plt.scatter(X[:, 1], X[:, 2], c=y, s=300, alpha=0.5, cmap=plt.cm.get_cmap('PiYG'))\n"
      ]
     },
@@ -122,23 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-6.99534089, -0.18099245,  0.98590886,  0.42019705,  0.10457698,\n",
-       "       -0.59830206,  0.85739125, -0.31840576,  0.47729336,  0.16637872])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Beta = np.linalg.inv(X.T @ X) @ X.T @ y"
    ]
@@ -162,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 132,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 133,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(np.float64(0.9502196193265008), np.float64(0.8111308307896873))\n"
+      "(0.9502196193265008, 0.8111308307896873)\n"
      ]
     }
    ],
@@ -323,60 +311,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "class LRClassifier:\n",
     "    def __init__(self, C, scale=True):\n",
     "        self.C = C\n",
     "        self.scale = scale\n",
+    "        self.feature_min = None  \n",
+    "        self.feature_max = None  \n",
+    "        self.first_value = None\n",
+    "        self.second_value = None\n",
     "    \n",
     "    def fit(self, X, y):\n",
     "        if self.scale:\n",
-    "            self.X_scaled = (X - np.min(X, 0)) / (np.max(X, 0) - np.min(X, 0)) \n",
+    "            self.feature_min = np.min(X, axis=0)\n",
+    "            self.feature_max = np.max(X, axis=0)\n",
+    "            range = self.feature_max - self.feature_min\n",
+    "            range[range == 0] = 1\n",
+    "            X_scaled = (X - self.feature_min) / range\n",
     "        else:\n",
-    "            self.X_scaled = np.copy(X)\n",
-    "        self.first_value = y[0]\n",
-    "        for v in y:\n",
-    "            if v != self.first_value:\n",
-    "                self.second_value = v\n",
-    "                break\n",
-    "        self.y_labeled = np.where(y == self.first_value, 1, -1)\n",
-    "        self.Beta = np.linalg.inv(self.X_scaled.T @ self.X_scaled + 1/self.C * np.eye(self.X_scaled.shape[1])) @ self.X_scaled.T @ self.y_labeled\n",
-    "    \n",
+    "            X_scaled = np.copy(X)\n",
+    "        \n",
+    "        unique_values = np.unique(y)\n",
+    "        \n",
+    "        self.first_value, self.second_value = unique_values\n",
+    "        y_labeled = np.where(y == self.first_value, 1, -1)\n",
+    "        I = np.eye(X_scaled.shape[1])\n",
+    "        self.Beta = np.linalg.solve(X_scaled.T @ X_scaled + (1 / self.C) * I, X_scaled.T @ y_labeled)\n",
+    "\n",
     "    def predict(self, X):\n",
     "        if self.scale:\n",
-    "            X_pred = (X - np.min(X, 0)) / (np.max(X, 0) - np.min(X, 0)) \n",
+    "            range = self.feature_max - self.feature_min\n",
+    "            range[range == 0] = 1\n",
+    "            X_scaled = (X - self.feature_min) / range\n",
     "        else:\n",
-    "            X_pred = np.copy(X)\n",
-    "        \n",
-    "        pred = np.where(np.dot(X_pred, self.Beta) < 0, -1, 1)\n",
+    "            X_scaled = np.copy(X)\n",
+    "\n",
+    "        predictions = np.dot(X_scaled, self.Beta)\n",
+    "        print(self.Beta)\n",
+    "        pred = np.where(predictions < 0, -1, 1)\n",
     "        res = np.where(pred == 1, self.first_value, self.second_value)\n",
-    "        return res\n",
-    "        "
+    "        return res\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['x' 'x' 'x']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_12780/1119166784.py:8: RuntimeWarning: invalid value encountered in divide\n",
-      "  self.X_scaled = (X - np.min(X, 0)) / (np.max(X, 0) - np.min(X, 0))\n",
-      "/tmp/ipykernel_12780/1119166784.py:21: RuntimeWarning: invalid value encountered in divide\n",
-      "  X_pred = (X - np.min(X, 0)) / (np.max(X, 0) - np.min(X, 0))\n"
+      "[ 0.         -1.06100796]\n",
+      "['x' 'y' 'y' 'y']\n"
      ]
     }
    ],
@@ -385,21 +377,14 @@
     "Xt = np.array([[1, 0], [1, 1], [1, 2], [1, 3], [1, 4]])\n",
     "yt = np.array(['x', 'x', 'y', 'y', 'y'])\n",
     "clf.fit(Xt, yt)\n",
-    "X = np.array([[1, -1], [1, 0.9], [1, 2.1]])\n",
-    "print(clf.predict(X)) # ['x', 'x', 'y']"
+    "X = np.array([[1, -1], [1, 0.9], [1, 2.1], [1, 23]])\n",
+    "print(clf.predict(X))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "EF_Python",
+   "display_name": "ef_python",
    "language": "python",
    "name": "python3"
   },
@@ -413,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
